--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
     "dotenv": "^4.0.0",
     "express": "^4.16.1",
@@ -23,7 +24,8 @@
     "mongodb": "^2.2.31",
     "mongoose": "5.8.0",
     "passport": "^0.4.0",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "react-bootstrap": "^1.0.0-beta.16"
   },
   "devDependencies": {
     "chai": "^4.1.2",
